--- a/Main/style.css
+++ b/Main/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -5,27 +7,29 @@
 }
 
 .container {
-    /* max-width: 100vw; 
-    height: 100vh;
-    width: 95%; */
     margin: 0 auto;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    /* padding: 20px 0px; */
 }
 
 .bars-container{
     display: flex;
     flex-direction: row;
+    margin-left: 26%;
+    margin-top: 0.8%;
 }
 
-.bar{
+.bar {
     width: 50px;
     background-color: aqua;
     margin: 0 2px;
     border-radius: 2px;
     transition: height 0.5s ease-in-out;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 11px;
+    text-shadow: 1px 1px 5px cyan;
 }
 
 body{
@@ -33,9 +37,41 @@ body{
 }
 
 .buttons-container {
-    width: 200px;
-    height: 30px;
-    background-color: #677685;
+    width: 450px;
+    height: 50px;
     border: none;
     border-radius: 5px;
+    align-items: center;
+    margin-top: 20px;
+    margin-left: 700px;
+}
+
+.btns {
+    /*
+    margin-left: 30px;
+    margin-top: 10px;
+    align-items: center;
+    font-size: 25px; */
+    margin-left: 8%;
+    background-color: #c2fbd7;
+    border-radius: 100px;
+    box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+    color: green;
+    cursor: pointer;
+    display: inline-block;
+    font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+    padding: 7px 20px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 250ms;
+    border: 0;
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.btns:hover {
+  box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
+  transform: scale(1.05) rotate(-1deg);
 }
