--- a/Main/MainPage/styleMain.css
+++ b/Main/MainPage/styleMain.css
@@ -3,7 +3,8 @@ body{
 }
 
 .btns {
-    margin-left: 35%;
+    margin-left: 25%;
+    margin-top: 5%;
     background-color: #c2fbd7;
     border-radius: 100px;
     box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
@@ -20,4 +21,37 @@ body{
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+}
+
+.buttons {
+    align-items: center;
+}
+
+.animate-charcter
+{
+   text-transform: uppercase;
+   margin-left: 25%;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #0dc462 67%,
+    #2c3e50 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+      font-size: 75px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
 }
